Gitignore & FMOD updated
Un-ignore FMOD folder in gitignore
Upload missing part of FMOD

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ sysinfo.txt
 *.unitypackage
 
 .DS_Store
+
+#Un-ignore FMOD
+!FMOD/JustChefin/Build/
+!FMOD/JustChefin/.user/
+!FMOD/JustChefin/Plugins/
